feat: created append to message list function and passed input value as an arguement to append successful word to the message paragraph in html. Passed that function into the event listener

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
             <input type="text" name="guess" placeholder="Input your word here" id="guess-input">
             <button id="button">Submit</button>
         
-    <p class ="msg">
+    <p class ="msg" id="message">
 
     </p>
     <ul class ="words">
