added calculate score function. I DONT KNOW HOW TO MAKE SCORE DYNAMICALLY CHANGE ON HTML FROM JS

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,13 +19,13 @@
         </tbody>
     </table>
         
-            <input type="text" name="guess" placeholder="Input your word here" id="guess-input">
-            <button id="button">Submit</button>
+    <input type="text" name="guess" placeholder="Input your word here" id="guess-input">
+    <button id="button">Submit</button>
         
-    <p class ="msg" id="message">
-
+    <p class ="msg" id="score-board">
     </p>
-    <ul class ="words">
+    
+    <ul class ="words" id = "message">
 
     </ul>
 </body>
