two additions: 1) hardcoded h2 total score into html and improved updateScore() to render into DOM new scores. 2) added logic using sessions in flask app in the /check-word route to add valid words to session and break if the same word was re-entered into the form

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,9 @@
     <title>Boggle</title>
 </head>
 <body>
+    <div>
+        <h2 id="total-score">Your Total Score is 0</h2>
+    </div>
     <table>
         <tbody>
         {% for row in board %}
